--- a/reducao_dimensionalidade/redução_de_dimensionalidade.ipynb
+++ b/reducao_dimensionalidade/redução_de_dimensionalidade.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "cc9f8273",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "2c1ccdc8",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "e1bcb2e5",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "7f58c635",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "0774e53a",
    "metadata": {},
    "outputs": [],
@@ -91,15 +91,16 @@
    "id": "3bb7288e",
    "metadata": {},
    "source": [
-    "Esse é um exemplo que é mais facíl monstrando exemplo. Imagine que você tem um duas luzer no gráfico e cada dado é um ponto que impede da luz passar você irá pegar o plano em que todos os dados estejam todos perpendiculares a esse plano. Esse será o novo plano reduzido"
+    "Esse é um exemplo que é mais facíl monstrando exemplo. Imagine que você tem um duas luzes no gráfico e cada dado é um ponto que impede da luz passar você irá pegar o plano em que todos os dados estejam todos perpendiculares a esse plano. Esse será o novo plano reduzido"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "b324aead",
    "metadata": {
-    "scrolled": true
+    "hide_input": true,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -109,7 +110,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,9 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "bd6b8fba",
-   "metadata": {},
+   "metadata": {
+    "hide_input": true
+   },
    "outputs": [
     {
      "data": {
@@ -131,7 +134,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,9 +161,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "4e6af870",
-   "metadata": {},
+   "metadata": {
+    "hide_input": true
+   },
    "outputs": [
     {
      "data": {
@@ -169,7 +174,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,9 +185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "6fb7c24e",
-   "metadata": {},
+   "metadata": {
+    "hide_input": true
+   },
    "outputs": [
     {
      "data": {
@@ -191,7 +198,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,9 +225,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "534b6c80",
-   "metadata": {},
+   "metadata": {
+    "hide_input": true
+   },
    "outputs": [
     {
      "data": {
@@ -229,7 +238,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,9 +281,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "733b6bdb",
-   "metadata": {},
+   "metadata": {
+    "hide_input": true
+   },
    "outputs": [
     {
      "data": {
@@ -283,7 +294,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,9 +321,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "8f805c5f",
-   "metadata": {},
+   "metadata": {
+    "hide_input": true
+   },
    "outputs": [
     {
      "data": {
@@ -321,7 +334,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,9 +345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "32565e15",
-   "metadata": {},
+   "metadata": {
+    "hide_input": true
+   },
    "outputs": [
     {
      "data": {
@@ -343,7 +358,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +399,7 @@
    "id": "548b67c7",
    "metadata": {},
    "source": [
-    "Uma vez que identificamos o os pcs, você pode reduzir a dimensionalidade do dataset para as d dimensões projetando em um hyperplano definido pelas primeiras d pcs. Slecionando o hyperplano garante que a projeção preserva quanta variância possível. "
+    "Uma vez que identificamos o os pcs, você pode reduzir a dimensionalidade do dataset para as d dimensões projetando em um hyperplano definido pelas primeiras d pcs. Selecionando o hyperplano garante que a projeção preserva quanta variância possível. "
    ]
   },
   {
@@ -397,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "87de2f96",
    "metadata": {},
    "outputs": [],
@@ -407,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "e2989b20",
    "metadata": {},
    "outputs": [],
@@ -418,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "a1893ce0",
    "metadata": {},
    "outputs": [
@@ -428,7 +443,7 @@
        "array([0.09746116, 0.07155445])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "180d6d16",
    "metadata": {},
    "outputs": [],
@@ -476,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "3037c226",
    "metadata": {},
    "outputs": [],
@@ -495,9 +510,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "06347d1b",
-   "metadata": {},
+   "metadata": {
+    "hide_input": true
+   },
    "outputs": [
     {
      "data": {
@@ -506,7 +523,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "2e8e5cb7",
    "metadata": {},
    "outputs": [],
@@ -546,9 +563,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "64388e2e",
-   "metadata": {},
+   "metadata": {
+    "hide_input": true
+   },
    "outputs": [
     {
      "data": {
@@ -557,7 +576,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "9f5481bd",
    "metadata": {},
    "outputs": [],
@@ -619,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "487f1fe2",
    "metadata": {},
    "outputs": [],
@@ -629,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "14607859",
    "metadata": {},
    "outputs": [],
@@ -652,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "a8973223",
    "metadata": {},
    "outputs": [],
@@ -673,9 +692,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f8dc349",
+   "metadata": {},
+   "source": [
+    "Assim como nas svms e possivel usar o kernel para fazer formas mais complexas do que so uma linha. Isso e chamado de kernel PCA (kPCA). Normalmente e bom em preservar os clusters de suas instancias apos a projecao, ou mesmo desenrolar datasets que estao proximas a um manifold enrolado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "6b02cd85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.decomposition import KernelPCA\n",
+    "\n",
+    "# rbf_pca = KernelPCA(n_components = 2, kernel = 'rbf', gamma = 0.04)\n",
+    "# X_reduced = rbf_pca.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "5e332404",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.pipeline import Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "4f333f2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = Pipeline([\n",
+    "    ('kpca', KernelPCA(n_components = 2)),\n",
+    "    ('log_reg', LogisticRegression())\n",
+    "])\n",
+    "\n",
+    "param_grid = [{\n",
+    "    'kpca_gamma':np.linspace(0.03, 0.05, 10),\n",
+    "    'kpca_kernel':['rbf', 'sigmoid']\n",
+    "}]\n",
+    "\n",
+    "grid_search = GridSearchCV(clf, param_grid, cv = 3)\n",
+    "# grid_search.fit(X, y)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77fd7f7d",
+   "id": "3146f7f0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -697,7 +770,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.8"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
